--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "node-sass": "^4.12.0",
+    "postcss-pxtorem": "^5.1.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3"
   }
